fix gsl symlinking
The original code searched for a specific version of gsl. This does not
work because different distro versions can install different versions of
gsl. So instead, search for the present gsl version. Assumes that it
consists of two values.

This also fixes a whitespace issue, in which the symlinking code started
on the same line as an apt pruning command.

--- a/neurodocker/templates/afni.yaml
+++ b/neurodocker/templates/afni.yaml
@@ -54,10 +54,10 @@ binaries:
     {{ self.install_dependencies() }}
     {%- if self.install_python3.lower() in ["true", "1", "y"] %}
     {{ self.install(["python3"]) }}
-    {% endif -%}
-    gsl2_path="$(find / -name 'libgsl.so.19' || printf '')"
-    if [ -n "$gsl2_path" ]; then \
-      ln -sfv "$gsl2_path" "$(dirname $gsl2_path)/libgsl.so.0"; \
+    {% endif %}
+    gsl_path="$(find / -name 'libgsl.so.??' || printf '')"
+    if [ -n "$gsl_path" ]; then \
+      ln -sfv "$gsl_path" "$(dirname $gsl_path)/libgsl.so.0"; \
     fi
     ldconfig
     mkdir -p {{ self.install_path }}
