--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ classifiers =
 packages = find:
 python_requires = >= 3.7
 install_requires =
-    click >= 7.0
+    click >= 7.0, <8.0
     etelemetry >= 0.2.0
     jinja2 >= 2.0
     jsonschema >= 3.0
