--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -280,7 +280,16 @@ source:
     else \
       pip3 install -r {{ self.source_path }}/python/requirements.txt; \
       pip3 install -r {{ self.source_path }}/python/requirements-extra.txt; \
-    fi            
+    fi
+    # Compile some utils to support samseg atlas creation, if enabled (see `fs_build_GEMS2`)
+    # ----------------------------------------------------
+    if [ "{{ self.samseg_atlas_build }}" = ON ] || [ "{{ self.samseg_atlas_build }}" = on ]; then \
+      ln -s /usr/local/bin/python3 /usr/local/bin/python; \
+      {{ self.source_path }}/packages/build_packages.py --only-itk {{ self.install_path }}/packages; \
+      cd {{ self.source_path }}/gems; \
+      cmake . -G "Unix Makefiles" -DBUILD_CUDA=OFF -DBUILD_EXECUTABLES=OFF -DBUILD_GUI=OFF -DBUILD_MATLAB=OFF -DBUILD_SHARED_LIBS=OFF -DBUILD_TESTING=OFF -DITK_DIR=/opt/freesurfer-20210513-fs-infant-dev-merge/packages/itk/4.13.0/src/build -DGFORTRAN_LIBRARIES=/usr/lib/gcc/x86_64-linux-gnu/5/libgfortran.so -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_CXX_COMPILER_AR=/usr/bin/ar -DCMAKE_CXX_COMPILER_RANLIB=/usr/bin/ranlib -DCMAKE_CXX_FLAGS="-msse2 -mfpmath=sse -fPIC -fpermissive" -DCMAKE_C_COMPILER=/usr/bin/cc -DCMAKE_C_COMPILER_AR=/usr/bin/ar -DCMAKE_C_COMPILER_RANLIB=/usr/bin/ranlib -DCMAKE_C_FLAGS="-msse2 -mfpmath=sse -fPIC -fpermissive" -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=.; \
+      make {{ self.make_opts }}; \
+    fi             
     # Files needed to be downloaded from the annex before we can run `make install`
     # todo: tag files in annex so we can run `git annex get --metadata fstags=makeinstall` (faster)
     # -------------------------------------------------
@@ -302,15 +311,6 @@ source:
     if [ -n "{{ self.license_base64 }}" ]; then \
       echo {{ self.license_base64 }} | base64 -d > {{ self.license_path }}; \
     fi
-    # Compile some utils to support samseg atlas creation, if enabled (see `fs_build_GEMS2`)
-    # ----------------------------------------------------
-    if [ "{{ self.samseg_atlas_build }}" = ON ] || [ "{{ self.samseg_atlas_build }}" = on ]; then \
-      ln -s /usr/local/bin/python3 /usr/local/bin/python; \
-      {{ self.source_path }}/packages/build_packages.py --only-itk {{ self.install_path }}/packages; \
-      cd {{ self.source_path }}/gems; \
-      cmake . -G "Unix Makefiles" -DBUILD_CUDA=OFF -DBUILD_EXECUTABLES=OFF -DBUILD_GUI=OFF -DBUILD_MATLAB=OFF -DBUILD_SHARED_LIBS=OFF -DBUILD_TESTING=OFF -DITK_DIR=/opt/freesurfer-20210513-fs-infant-dev-merge/packages/itk/4.13.0/src/build -DGFORTRAN_LIBRARIES=/usr/lib/gcc/x86_64-linux-gnu/5/libgfortran.so -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_CXX_COMPILER_AR=/usr/bin/ar -DCMAKE_CXX_COMPILER_RANLIB=/usr/bin/ranlib -DCMAKE_CXX_FLAGS="-msse2 -mfpmath=sse -fPIC -fpermissive" -DCMAKE_C_COMPILER=/usr/bin/cc -DCMAKE_C_COMPILER_AR=/usr/bin/ar -DCMAKE_C_COMPILER_RANLIB=/usr/bin/ranlib -DCMAKE_C_FLAGS="-msse2 -mfpmath=sse -fPIC -fpermissive" -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_INSTALL_PREFIX=.; \
-      make {{ self.make_opts }}
-    fi 
     # Setup mount points
     # -------------------------------------------------
     mkdir -p {{ self.subjects_dir }}
