[FIX] unlocking git annex before `make install`

--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -292,6 +292,7 @@ source:
     #                This is because surfer.nmr now runs git-annex 8 todo: upgrade
     git annex enableremote datasrc || true
     git annex get -q .
+    git annex unlock
     # Install
     # -------------------------------------------------    
     cd {{ self.install_path }}
