bugfix: install fslpython with fsl 6.0.4
Fixes https://github.com/ReproNim/neurodocker/issues/406

--- a/neurodocker/templates/fsl.yaml
+++ b/neurodocker/templates/fsl.yaml
@@ -52,7 +52,7 @@ generic:
       sed -i '$iecho If you are considering commercial use of this container, please consult the relevant license:' $ND_ENTRYPOINT
       sed -i '$iecho https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/Licence' $ND_ENTRYPOINT
       sed -i '$isource $FSLDIR/etc/fslconf/fsl.sh' $ND_ENTRYPOINT
-      {% if fsl.version in ("5.0.11", "5.0.10", "6.0.1", "6.0.2", "6.0.3") -%}
+      {% if fsl.version in ("5.0.11", "5.0.10", "6.0.1", "6.0.2", "6.0.3", "6.0.4") -%}
       echo "Installing FSL conda environment ..."
       bash {{ fsl.install_path }}/etc/fslconf/fslpython_install.sh -f {{ fsl.install_path }}
       {% endif -%}
