--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -191,6 +191,7 @@ source:
     - libjpeg62-dev
     - libopenblas-dev
     - libssl-dev
+    - libsqlite3-dev
     - libtool
     - libtool-bin
     - libx11-dev
@@ -304,6 +305,9 @@ source:
     if [ -n "{{ self.license_base64 }}" ]; then \
       echo {{ self.license_base64 }} | base64 -d > {{ self.license_path }}; \
     fi
+    ## *** Dev options; this should become it's own variable
+    pip3 install jupyter
+    ## *** End dev options
     # Setup mount points
     # -------------------------------------------------
     mkdir -p {{ self.subjects_dir }}
