[WIP] prereqs for jupyter

--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -191,7 +191,7 @@ source:
     - libjpeg62-dev
     - libopenblas-dev
     - libssl-dev
-    - libsqlite3
+    - libsqlite3-dev
     - libtool
     - libtool-bin
     - libx11-dev
@@ -306,7 +306,7 @@ source:
       echo {{ self.license_base64 }} | base64 -d > {{ self.license_path }}; \
     fi
     ## *** Dev options; this should become it's own variable
-    ## Note jupyter relies on `libsqlite3` being present before python is compiled
+    ## Note jupyter relies on `libsqlite3-dev` being present before python is compiled
     pip3 install jupyter
     ## *** End dev options
     # Setup mount points
