[WIP] New Params
- git_annex_get: "ON"
- dev_tools: "OFF"
- cxx_flags: "-msse2 -mfpmath=sse -fPIC -fpermissive"
- c_flags: "-msse2 -mfpmath=sse -fPIC -fpermissive"
- `make install` not run if `git_annex_get` is `OFF`.
- `make install` will run in the gems dir if `samseg_atlas_build` is `ON`
  - even if `git_annex_get` is `OFF`

--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -110,6 +110,8 @@ source:
       distribute_fspython: "OFF"
       martinos_build: "OFF"
       samseg_atlas_build: "OFF"
+      git_annex_get: "ON"
+      dev_tools: "OFF"
       fortran_libs: /usr/lib/gcc/x86_64-linux-gnu/5/libgfortran.so
       # --- Probably don't have to change args below here (?) ---
       source_path: /tmp/freesurfer/freesurfer-{{ self.version }}
@@ -117,7 +119,9 @@ source:
       install_path: /opt/freesurfer-{{ self.version }}
       # This one has to be quoted with \"s for some reason
       license_path: "{{ self.install_path }}/license.txt"
-      cmake_opts: -DCMAKE_INSTALL_PREFIX={{ self.install_path }} -DBUILD_GUIS={{ self.build_guis }} -DMINIMAL={{ self.minimal }} -DINFANT_MODULE={{ self.infant_module }} -DFS_PACKAGES_DIR={{ self.pkg_path }} -DGFORTRAN_LIBRARIES={{ self.fortran_libs }} -DINSTALL_PYTHON_DEPENDENCIES={{ self.install_python_deps }} -DDISTRIBUTE_FSPYTHON={{ self.distribute_fspython }} -DMARTINOS_BUILD={{ self.martinos_build }} -DGEMS_BUILD_EXECUTABLES={{ self.samseg_atlas_build }} -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_CXX_COMPILER_AR=/usr/bin/ar -DCMAKE_CXX_COMPILER_RANLIB=/usr/bin/ranlib -DCMAKE_CXX_FLAGS="-msse2 -mfpmath=sse -fPIC -fpermissive" -DCMAKE_C_COMPILER=/usr/bin/cc -DCMAKE_C_COMPILER_AR=/usr/bin/ar -DCMAKE_C_COMPILER_RANLIB=/usr/bin/ranlib -DCMAKE_C_FLAGS="-msse2 -mfpmath=sse -fPIC -fpermissive"
+      cxx_flags: "-msse2 -mfpmath=sse -fPIC -fpermissive"
+      c_flags: "-msse2 -mfpmath=sse -fPIC -fpermissive"
+      cmake_opts: -DCMAKE_INSTALL_PREFIX={{ self.install_path }} -DBUILD_GUIS={{ self.build_guis }} -DMINIMAL={{ self.minimal }} -DINFANT_MODULE={{ self.infant_module }} -DFS_PACKAGES_DIR={{ self.pkg_path }} -DGFORTRAN_LIBRARIES={{ self.fortran_libs }} -DINSTALL_PYTHON_DEPENDENCIES={{ self.install_python_deps }} -DDISTRIBUTE_FSPYTHON={{ self.distribute_fspython }} -DMARTINOS_BUILD={{ self.martinos_build }} -DGEMS_BUILD_EXECUTABLES={{ self.samseg_atlas_build }} -DCMAKE_CXX_COMPILER=/usr/bin/g++ -DCMAKE_CXX_COMPILER_AR=/usr/bin/ar -DCMAKE_CXX_COMPILER_RANLIB=/usr/bin/ranlib -DCMAKE_CXX_FLAGS="{{ self.cxx_flags }}" -DCMAKE_C_COMPILER=/usr/bin/cc -DCMAKE_C_COMPILER_AR=/usr/bin/ar -DCMAKE_C_COMPILER_RANLIB=/usr/bin/ranlib -DCMAKE_C_FLAGS="{{ self.c_flags }}"
       make_opts: -j4
   env:
     FS_LICENSE: "{{ self.license_path }}"
@@ -281,34 +285,44 @@ source:
       ln -s {{ self.install_path }}/bin/infant-container-entrypoint.bash /bin/infant-container-entrypoint.bash; \
     else \
       pip3 install -r {{ self.source_path }}/python/requirements.txt; \
-      pip3 install -r {{ self.source_path }}/python/requirements-extra.txt; \
     fi
+    # PW 2021/08/13: moving comments outside of `git_annex_get` if block
+    # PW 2021/03/04: Weird.. this (`git annex enableremote datasrc`) returns an 
+    #                error code, but things still work?
+    #                So hardwire the exit code to zero so `docker build` doesn't error out
+    #                This is because surfer.nmr now runs git-annex 8? todo: upgrade
     # Files needed to be downloaded from the annex before we can run `make install`
     # todo: tag files in annex so we can run `git annex get --metadata fstags=makeinstall` (faster)
     # -------------------------------------------------
-    cd {{ self.source_path }}
-    git remote add datasrc {{ self.annex }}
-    git fetch datasrc
-    # PW 2021/03/04: Werid.. this returns an error code, but things still work?
-    #                So hardwire the exit code to zero so `docker build` doesn't error out
-    #                This is because surfer.nmr now runs git-annex 8 todo: upgrade
-    git annex enableremote datasrc || true
-    git annex get -q .
-    git annex unlock
-    # Install
-    # -------------------------------------------------    
-    cd {{ self.install_path }}
-    make install
+    if [ "{{ self.git_annex_get }}" = ON ] || [ "{{ self.git_annex_get }}" = on ]; then \
+      cd {{ self.source_path }}; \
+      git remote add datasrc {{ self.annex }}; \
+      git fetch datasrc; \
+      git annex enableremote datasrc || true; \
+      git annex get -q .; \
+      git annex unlock; \
+      cd {{ self.install_path }}; \
+      make install; \
+    fi
+    # Since the gems subdir doesn't rely on the annex remote to execute `make install`,
+    # If were building for samseg atlases, run make install in the gems subdir
+    # This lets us build the container with git_annex_get=off, and still have gems binaries installed
+    if [ "{{ self.samseg_atlas_build }}" = ON ] || [ "{{ self.samseg_atlas_build }}" = on ]; then \
+      cd {{ self.source_path }}/gems; \
+      make install; \
+    fi
     # If self.license_base64 populated, decode from base64 and write to self.license_path
     # https://github.com/pwighton/fs-docker/blob/master/run/entrypoint.freesurfer-run.bash
     # -------------------------------------------------
     if [ -n "{{ self.license_base64 }}" ]; then \
       echo {{ self.license_base64 }} | base64 -d > {{ self.license_path }}; \
     fi
-    ## *** Dev options; this should become it's own variable
+    ## *** Dev tools **
     ## Note jupyter relies on `libsqlite3-dev` being present before python is compiled
-    pip3 install jupyter
-    ## *** End dev options
+    if [ "{{ self.dev_tools }}" = ON ] || [ "{{ self.dev_tools }}" = on ]; then \
+      pip3 install jupyter; \
+      pip3 install -r {{ self.source_path }}/python/requirements-extra.txt; \
+    fi
     # Setup mount points
     # -------------------------------------------------
     mkdir -p {{ self.subjects_dir }}
