--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -260,7 +260,7 @@ source:
     mkdir -p {{ self.install_path }}
     {%- if self.license_base64 is defined and self.license_base64|length %}
     echo "   fs license (base64):      "{{ self.license_base64 }}
-    mkdir -p `dirname {{ self.license_path }}`
+    mkdir -p $(dirname {{ self.license_path }})
     echo {{ self.license_base64 }} | base64 -d > {{ self.license_path }}
     {% endif -%}
     wget -q -c {{ self.pkg_url }} -O - | tar -xz -C {{ self.pkg_path }}
