[WIP] syntax test

--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -273,11 +273,11 @@ source:
     echo "   branch:      "{{ self.branch }}
     echo "   commit:      "{{ self.commit }}
     echo "   destination: "{{ self.source_path }}
-    git clone --branch {{ self.branch }} {{ self.repo }} {{ self.source_path }}
+    git clone --branch {{ self.branch }} {{ self.repo }} {{ self.source_path }} 
     {%- if self.commit is defined and self.commit|length %}
     cd {{ self.source_path }}
     git checkout {{ self.commit }}
-    {% endif -%}    
+    {% endif %}    
     cd {{ self.install_path }}
     cmake {{ self.cmake_opts }} {{ self.source_path }}
     make {{ self.make_opts }}
