[FIX] applying @kaczmarj's diff

--- a/neurodocker/templates/matlabmcr.yaml
+++ b/neurodocker/templates/matlabmcr.yaml
@@ -31,23 +31,30 @@ binaries:
     "2012a": https://ssd.mathworks.com/supportfiles/MCR_Runtime/R2012a/MCR_R2012a_glnxa64_installer.zip
     "2010a": https://dl.dropbox.com/s/zz6me0c3v4yq5fd/MCR_R2010a_glnxa64_installer.bin
   dependencies:
-    apt: 
-    - bc 
-    - libncurses5 
-    - libxext6 
-    - libxmu6 
-    - libxpm-dev 
+    apt:
+    - bc
+    - curl
+    - libncurses5
+    - libxext6
+    - libxmu6
+    - libxpm-dev
     - libxt6
-    yum: 
-    - bc 
-    - libXext.x86_64 
-    - libXmu 
-    - libXpm 
+    - multiarch-support
+    - unzip
+    yum:
+    - bc
+    - curl
+    - libXext.x86_64
+    - libXmu
+    - libXpm
     - libXt.x86_64
+    - unzip
     debs:
     - http://mirrors.kernel.org/debian/pool/main/libx/libxp/libxp6_1.0.2-2_amd64.deb
   env:
-    LD_LIBRARY_PATH: "$LD_LIBRARY_PATH:/usr/lib/x86_64-linux-gnu:{{ self.install_path }}/{{ self.version }}/runtime/glnxa64:{{ self.install_path }}/{{ self.version }}/bin/glnxa64:{{ self.install_path }}/{{ self.version }}/sys/os/glnxa64:{{ self.install_path }}/{{ self.version }}/extern/bin/glnxa64"
+    LD_LIBRARY_PATH: |
+      {% set versionTovXX = {"2019b": "v97", "2019a": "v98", "2018b": "v95", "2018a": "v94", "2017b": "v93", "2017a": "v92", "2016b": "v91", "2016a": "v901", "2015b": "v90", "2015aSP1": "v851", "2015a": "v85", "2014b": "v84", "2014a": "v83", "2013b": "v82", "2013a": "v81", "2012b": "v80", "2012a": "v717"} -%}
+      $LD_LIBRARY_PATH:/usr/lib/x86_64-linux-gnu:{{ self.install_path }}/{{ versionTovXX[self.version] }}/runtime/glnxa64:{{ self.install_path }}/{{ versionTovXX[self.version] }}/bin/glnxa64:{{ self.install_path }}/{{ versionTovXX[self.version] }}/sys/os/glnxa64:{{ self.install_path }}/{{ versionTovXX[self.version] }}/extern/bin/glnxa64
     MATLABCMD: "{{ self.install_path }}/{{ self.version }}/toolbox/matlab"
   instructions: |
     export TMPDIR="$(mktemp -d)"
