--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -22,6 +22,7 @@ binaries:
         subjects/fsaverage_sym
         trctrain
   urls:
+    "7.2.0": https://surfer.nmr.mgh.harvard.edu/pub/dist/freesurfer/7.2.0/freesurfer-linux-centos6_x86_64-7.2.0.tar.gz
     "7.1.1": https://surfer.nmr.mgh.harvard.edu/pub/dist/freesurfer/7.1.1/freesurfer-linux-centos6_x86_64-7.1.1.tar.gz
     "7.1.1-min": https://dl.dropbox.com/s/c3earkfhhvdyuo4/freesurfer-7.1.1-min.tgz
     "7.1.0": https://surfer.nmr.mgh.harvard.edu/pub/dist/freesurfer/7.1.0/freesurfer-linux-centos6_x86_64-7.1.0.tar.gz
@@ -77,7 +78,7 @@ binaries:
     echo "Downloading FreeSurfer ..."
     mkdir -p {{ self.install_path }}
     curl -fL {{ self.urls[self.version] }} \
-    | tar -xz -C {{ self.install_path }} --strip-components 1 {% if self.exclude_paths -%}\
+    | tar -xz -C {{ self.install_path }} --owner root --group root --no-same-owner --strip-components 1 {% if self.exclude_paths -%}\
     {%- for exclude_path in self.exclude_paths.split() %}
       {% if not loop.last -%}
       --exclude='{{ exclude_path }}' \
