--- a/neurodocker/templates/ants.yaml
+++ b/neurodocker/templates/ants.yaml
@@ -69,7 +69,7 @@ source:
     {% if self.version != "master" and self.version != "latest" -%}
     cd /tmp/ants/source
     git fetch --tags
-    git checkout v{{ self.version }}
+    git -c advice.detachedHead=false checkout v{{ self.version }}
     {% endif -%}
     cd /tmp/ants/build
     cmake {{ self.cmake_opts }} /tmp/ants/source
