added make install

--- a/neurodocker/templates/ants.yaml
+++ b/neurodocker/templates/ants.yaml
@@ -78,8 +78,11 @@ source:
     # Recent versions of ants create ANTS-build.
     if [ -d ANTS-build ]; then \
       cd ANTS-build \
-      && make ; \
+      && make install; \
     else \
       mv bin lib {{ self.install_path }}/ \
       mv ../Scripts/* {{ self.install_path }} ; \
     fi
+    rm -rf /tmp/ants
+
+    
