--- a/neurodocker/templates/cat12.yaml
+++ b/neurodocker/templates/cat12.yaml
@@ -26,10 +26,9 @@ binaries:
     SPM_HTML_BROWSER: "0"
     MCR_INHIBIT_CTF_LOCK: 1
     SPM_HTML_BROWSER: 0
-    SPMROOT: /opt/cat12_link
-    MCRROOT: /opt/mcr_link
-    MCR_INHIBIT_CTF_LOCK: 1v
-
+    SPMROOT: "{{ self.install_path }}"
+    MCR_INHIBIT_CTF_LOCK: 1
+    PATH: "{{ self.install_path }}:$PATH"
 
   instructions: |
     {{ self.install_dependencies() }}
