--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -103,7 +103,7 @@ binaries:
         dpkg -i /stage/freesurfer_amd64.deb
         # To supress interactive keyboard-configuration
         DEBIAN_FRONTEND=noninteractive apt-get -f -y install
-        # todo: find install dir and set env vars accordingly
+        # todo: find install dir (/usr/local/freesurfer/7.2.0/) and set env vars accordingly
         apt-get clean
         rm -rf /var/lib/apt/lists/*
         sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/'
