--- a/neurodocker/templates/fsl.yaml
+++ b/neurodocker/templates/fsl.yaml
@@ -51,6 +51,7 @@ binaries:
     - libxrandr2
     - libxrender1
     - libxt6
+    - nano
     - sudo
     - wget
     yum:
@@ -72,6 +73,7 @@ binaries:
     - libjpeg
     - libmng
     - libpng12
+    - nano
     - openblas-serial
     - sudo
     - wget
