--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -129,6 +129,8 @@ source:
       # dir and have the subjects dir excluded
       subjects_dir: "/ext/fs-subjects"
       infant_model_dir: "/opt/fs-infant-model"
+      infant_model_s3: "s3://freesurfer-annex/infant/model/dev/"
+      infant_model_s3_region: "us-east-2"
       repo: https://github.com/freesurfer/freesurfer
       pkg_url: http://surfer.nmr.mgh.harvard.edu/pub/data/fspackages/prebuilt/centos7-packages.tar.gz
       annex: https://surfer.nmr.mgh.harvard.edu/pub/dist/freesurfer/repo/annex.git
@@ -277,7 +279,7 @@ source:
     cd /stage/Python-3.6.8
     ./configure
     make
-    make install 
+    make install
     cd /
     rm -rf /stage/Python-3.6.8
     pip3 install -q --no-cache-dir -U pip
@@ -360,6 +362,9 @@ source:
     ./aws/install
     rm -rf /stage/aws
     rm -rf /stage/awscliv2.zip
+    {%- if self.infant_model_s3 is defined and self.infant_model_s3|length and self.infant_model_s3_region is defined and self.infant_model_s3_region|length %}
+    echo "You should copy the atlas from s3 here"
+    {% endif -%}
     {% else %}
     rm -rf /stage
     {% endif -%}
