[WIP] copying the infant model into the container, but not by default

--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -129,8 +129,8 @@ source:
       # dir and have the subjects dir excluded
       subjects_dir: "/ext/fs-subjects"
       infant_model_dir: "/opt/fs-infant-model"
-      infant_model_s3: "s3://freesurfer-annex/infant/model/dev/"
-      infant_model_s3_region: "us-east-2"
+      infant_model_s3: ""
+      infant_model_s3_region: ""
       repo: https://github.com/freesurfer/freesurfer
       pkg_url: http://surfer.nmr.mgh.harvard.edu/pub/data/fspackages/prebuilt/centos7-packages.tar.gz
       annex: https://surfer.nmr.mgh.harvard.edu/pub/dist/freesurfer/repo/annex.git
@@ -363,7 +363,7 @@ source:
     rm -rf /stage/aws
     rm -rf /stage/awscliv2.zip
     {%- if self.infant_model_s3 is defined and self.infant_model_s3|length and self.infant_model_s3_region is defined and self.infant_model_s3_region|length %}
-    echo "You should copy the atlas from s3 here"
+    aws s3 cp --no-sign-request --region={{ self.infant_model_s3_region }} --recursive --include '*' {{ self.infant_model_s3 }} {{ self.infant_model_dir }}/
     {% endif -%}
     {% else %}
     rm -rf /stage
